# spiffworkflow-connector

./: .gitignore  .snyk  Dockerfile  LICENSE.md  Makefile  README.md  Taskfile.yml  app.py  artifacts.py  config.py  dev.Dockerfile  dev.docker-compose.yml  docker-compose.yml  main.py  pdf.py  pyproject.toml  requirements-dev.txt  requirements.txt  s3utils.py
.github/workflows/: publish-image.yml  publish_image.yml  pull-request-checks.yml
.mc/: config.json
.pki/nssdb/: key4.db
auths/: simple_auth.py
certs/: README.md
connector-pdf/: README.md  pyproject.toml
connector-pdf/src/connector_pdf/commands/: pdf_to_s3.py
connector-pdf/src/connector_pdf/modules/: minio.py
modules/: minio.py
templates/: attachment-cover.html  base-styles.html  blm-ce.html  blm-id-checklist.html  image-attachment.html  tailwind.html
tests/: conftest.py  test_app.py  test_artifacts.py  test_direct_routes.py
