[project]
name = "spiffworkflow-connector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.40.42",
    "falcon>=4.1.0",
    "granian>=2.5.4",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "minio>=7.2.18",
    "orjson>=3.11.3",
    "playwright>=1.55.0",
    "pyinstrument>=5.1.1",
    "pypdf>=6.4.0",
    "watchfiles>=1.1.0",
]

[dependency-groups]
dev = [
    "pyfakefs>=5.9.3",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
]
